<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="default_dialog_title">Select a color</string>
    <string name="Switch">Switch</string>
    <string name="Text">Text</string>
    <string name="about">About the app</string>
    <string name="version_label">Version %1$s</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_done">Done</string>
    <string name="action_import_export">Import / Export</string>
    <string name="action_rearrange">Rearrange</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_option">Add new option</string>
    <string name="add_option">Add option</string>
    <string name="address">Address</string>
    <string name="alert">Alert</string>
    <string name="allow_metrics_management_description">Allow metrics management. If disabled, you can\'t add, edit, delete or rearrange metrics. This serves as protection from unintentional metrics changing.</string>
    <string name="blink_expression">Blink tile to draw attention, if the expression evaluates to \'true\'.\nExpression can be any valid JavaScript expression which evaluates to boolean (true|false).\nYou can use \'val\' and \'secs\' constants in your expression.\n\'val\' contains either, received raw payload or extracted from JSON raw value, if JSON path specified.\n\'secs\' contains numbers of seconds since last activity (last data received or image downloaded).\nFor example, with the following expression, tile will blink if temperature is lower than 10 or higher than 90: \'val &lt; 10 || val &gt; 90\'.</string>
    <string name="bottom_text">Bottom text</string>
    <string name="cant_configure_metrics_list">Cant configure metrics list</string>
    <string name="cant_convert_payload_to_number">Can\'t convert payload to number</string>
    <string name="cant_create_ssl_connection">Can\'t create SSL connection</string>
    <string name="cant_get_image_from_url">Can\'t get image from the URL</string>
    <string name="cant_initialize_metrics_list">Can\'t initialize metrics list UI</string>
    <string name="cant_load_saved_metrics">Can\'t load saved metrics</string>
    <string name="cant_reset_progress">Can\'t reset metrics progress</string>
    <string name="cant_save_metrics">Can\'t save metrics: </string>
    <string name="javascript_error">JavaScript error</string>
    <string name="cant_subscribe_connection_issues">Can\'t subscribe: connection issues</string>
    <string name="choose_type">Choose type</string>
    <string name="client_id">Client ID (must be unique)</string>
    <string name="clone">Clone</string>
    <string name="close">Close</string>
    <string name="color">Color</string>
    <string name="color_metric_description">With this metric you can display/set color values. For example, you can change colors of your LED strips.\nSupported formats for colors are: HEX or numeric string.</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_failed">Connection failed</string>
    <string name="verbose_connection_errors">Show verbose connection-error dialog (blocks reconnect until dismissed)</string>
    <string name="default_auto_connect">Default (automatically connect on start up).\nNote: this option is useful if you have just one connection configured.\nIf you have more than one connection, you can create home screen shortcut for every connection.\nTo create shortcut long press on any connection in connections list.</string>
    <string name="download_image_from_a_static_url">Download image from a static URL (MQTT not involved)</string>
    <string name="download_image_from_url_received_as_payload">Download image from URL, received as payload contents</string>
    <string name="enable_ssl_tls">Enable connection encryption (SSL/TLS).\nNote: if server certificate is self-signed, you need to install it to your device or enable option below, otherwise connection will fail. If server certificate issued by a known Certificate Authority (CA), it will work out of box, without installing to you device. Also don\'t forget, that MQTT servers have different ports for plain and SSL/TLS connections.</string>
    <string name="image_file_data_received_as_binary_payload">Image file data received as binary payload contents</string>
    <string name="image_metric_description">This metric is intended for displaying image from a specified URL (static or received as payload). It\'s also possible to receive image file data as binary payload. E.g. you could display weather icon, which received as URL or binary data. Other usage could be displaying still image from your IP camera using static URL (for example, display garage door next to open/close metric switch, so you could monitor the door opening/closing).</string>
    <string name="image_url">Image URL</string>
    <string name="import_export_metrics_description">Import / export metrics: you can subscribe for metrics on one device and publish metrics to the same topic on other device. Warning: Any existing metrics will be replaced! To prevent other clients to publish metrics data, use an unique secret topic name if needed</string>
    <string name="json_path_if_payload_is_json">Extract from JSON path (if payload is in JSON format), e.g.: $.level.value. JSON path documentation at the URL below:</string>
    <string name="keep_screen_on_when_connected">Keep screen on when connected to this broker</string>
    <string name="label">Label</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="metrics_columns_count_horz">Metrics columns count for horizontal orientation (0 - auto)</string>
    <string name="metrics_columns_count_vert">Metrics columns count for vertical orientation (0 - auto)</string>
    <string name="name">Name</string>
    <string name="never_hide_broker_name">Never hide top panel with connection name</string>
    <string name="on_display_description">\'On Display\' JavaScript handler called each time, when the app renders metric tile contents, e.g. when content changed or last activity time changed</string>
    <string name="on_receive_description">\'On Receive\' JavaScript handler called when new payload received for this metric</string>
    <string name="on_tap_description">\'On Tap\' JavaScript handler called when you tap (click) on the tile</string>
    <string name="open_url_on_tap">Open this URL when image tapped</string>
    <string name="payload">Payload</string>
    <string name="port">Port</string>
    <string name="publish_metrics">Publish metrics</string>
    <string name="publish_metrics_retained">Publish metrics (retained)</string>
    <string name="delete_retained_metrics">Delete retained message on topic</string>
    <string name="refresh_interval_seconds">Refresh interval (seconds)</string>
    <string name="small">Small</string>
    <string name="subscribe_and_wait_for_metrics">Subscribe and wait for metrics</string>
    <string name="tile_size">Tile size</string>
    <string name="topic">Topic</string>
    <string name="topic_sub">Topic (sub)</string>
    <string name="trust_certificate">This broker uses self-signed SSL/TLS certificate. I trust this certificate at my own risk.</string>
    <string name="user_name">User name</string>
    <string name="user_password">User password</string>
    <string name="json_path_help_link">https://github.com/jayway/JsonPath/blob/master/README.md</string>
    <string name="metrics_exchange_topic_name">metrics/exchange</string>
    <string name="on_display">On Display</string>
    <string name="on_receive">On Receive</string>
    <string name="on_tap">On Tap</string>
</resources>