<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff67d"
            android:id="@+id/textView2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/image_metric_description"/>
        <RadioGroup
            android:orientation="vertical"
            android:id="@+id/kindRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/staticUrlRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/download_image_from_a_static_url"/>
            <RadioButton
                android:id="@+id/payloadUrlRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_image_from_url_received_as_payload"/>
            <RadioButton
                android:id="@+id/binaryPayloadRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_file_data_received_as_binary_payload"/>
        </RadioGroup>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/nameTextView"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:id="@+id/topicTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_sub"/>
        <EditText
            android:id="@+id/topicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:id="@+id/jsonPathTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/json_path_if_payload_is_json"/>
        <TextView
            android:autoLink="web"
            android:id="@+id/jsonPathHelpLinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/json_path_help_link"
            android:textAllCaps="false"/>
        <EditText
            android:id="@+id/jsonPathEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:id="@+id/imageUrlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_url"/>
        <EditText
            android:id="@+id/imageUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"/>
        <TextView
            android:id="@+id/refreshIntervalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_interval_seconds"/>
        <EditText
            android:gravity="center"
            android:id="@+id/refreshIntervalEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="5"
            android:ems="10"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/openUrlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_url_on_tap"/>
        <EditText
            android:id="@+id/openUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"/>
        <TextView
            android:id="@+id/blinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blink_expression"/>
        <EditText
            android:id="@+id/blinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/jsOnReceiveDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_receive_description"/>
        <Button
            android:id="@+id/jsOnReceiveButton"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/on_receive"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/jsOnDisplayDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_display_description"/>
        <Button
            android:id="@+id/jsOnDisplayButton"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/on_display"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/jsOnTapDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_tap_description"/>
        <Button
            android:id="@+id/jsOnTapButton"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/on_tap"/>
    </LinearLayout>
</ScrollView>
