<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff67d"
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/import_export_metrics_description"/>
        <TextView
            android:id="@+id/topicTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topic"/>
        <EditText
            android:id="@+id/topicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metrics_exchange_topic_name"
            android:ems="10"
            android:inputType="text"/>
        <Button
            android:id="@+id/publishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_metrics"/>
        <Button
            android:id="@+id/publishRetainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_metrics_retained"/>
        <Button
            android:id="@+id/deleteRetainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_retained_metrics"/>
        <Button
            android:id="@+id/subscribeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_and_wait_for_metrics"/>
        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"/>
        <Button
            android:layout_gravity="center"
            android:id="@+id/closeButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/close"/>
    </LinearLayout>
</ScrollView>
