<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:isScrollContainer="true">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/autoConnectCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_auto_connect"/>
        <CheckBox
            android:id="@+id/keepScreenOnCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_screen_on_when_connected"/>
        <CheckBox
            android:id="@+id/metricsEditableCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow_metrics_management_description"/>
        <CheckBox
            android:id="@+id/neverHideBrokerNameCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/never_hide_broker_name"/>
        <CheckBox
            android:id="@+id/verboseConnectionErrorsCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verbose_connection_errors"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:id="@+id/portTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"/>
        <EditText
            android:id="@+id/portEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"/>
        <CheckBox
            android:id="@+id/enableSslCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enable_ssl_tls"/>
        <CheckBox
            android:id="@+id/trustCertificateCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trust_certificate"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/userTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"/>
        <EditText
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_password"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/clientIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_id"/>
        <EditText
            android:id="@+id/clientIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tileSizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tile_size"/>
        <RadioGroup
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/smallRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/small"/>
            <RadioButton
                android:id="@+id/mediumRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/medium"/>
            <RadioButton
                android:id="@+id/largeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"/>
        </RadioGroup>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/colsCountVertTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/metrics_columns_count_vert"/>
        <EditText
            android:enabled="true"
            android:gravity="center"
            android:id="@+id/colsCountVertEditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/colsCountHorzTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_columns_count_horz"/>
        <EditText
            android:enabled="true"
            android:gravity="center"
            android:id="@+id/colsCountHorzEditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>
</ScrollView>
