<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/payloadTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload"/>
        <EditText
            android:id="@+id/payloadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/labelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label"/>
        <EditText
            android:id="@+id/labelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/action_done"/>
    </LinearLayout>
</ScrollView>
